--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>WhatsApp CRM Master Training</title>
+    <title>Bitespeed Training</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Plus+Jakarta+Sans:wght@300;400;500;600;700;800&family=JetBrains+Mono:wght@400;500&display=swap" rel="stylesheet">
@@ -534,7 +534,7 @@ ul { list-style: none; }
         <span class="label-badge lbl-blue" style="font-size: 14px; letter-spacing: 0.1em; text-transform: uppercase;">Internal Sales & Support Training</span>
     </div>
     
-    <h1>CRM Masterclass</h1>
+    <h1>Bitespeed Manual</h1>
     
     <p style="font-size: 20px; max-width: 700px; margin-top: 24px; color: #94a3b8;">
         The definitive guide to managing leads, retaining members, and keeping our data pristine.
