--- a/index.html
+++ b/index.html
@@ -2886,7 +2886,7 @@
         }
 
         if (!keyToUse) {
-          const inputKey = prompt("Please enter your Google Gemini API Key:");
+          const inputKey = prompt("Please enter your Key:");
           if (inputKey && inputKey.trim() !== "") {
             keyToUse = inputKey.trim();
           } else {
